Add BurstEmitter, and a simple render path for UltraParticles
None of the intermediate paths are written though. It's all or virtually
nothing.

--- a/src/imports/particles/spriteparticles.qrc
+++ b/src/imports/particles/spriteparticles.qrc
@@ -16,5 +16,7 @@
         <file>resources/ultrafragment.shader</file>
         <file>resources/supervertex.shader</file>
         <file>resources/superfragment.shader</file>
+        <file>resources/simplevertex.shader</file>
+        <file>resources/simplefragment.shader</file>
     </qresource>
 </RCC>
