--- a/examples/declarative/canvas/stockchart/stockchart.qrc
+++ b/examples/declarative/canvas/stockchart/stockchart.qrc
@@ -1,6 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
     <file>stock.qml</file>
+    <file>contents/Stocks.qml</file>
 </qresource>
 </RCC>
 
