Implement Turbulence properly
Or at least closer to. Now uses curl noise off of a source noise image,
documented as usable, and not an immense performance drain (just a
normal one).

Change-Id: Iac11c98cd9589cbe6a41b2b30893ab40d541d18f
Reviewed-on: http://codereview.qt-project.org/4510
Reviewed-by: Alan Alpert <alan.alpert@nokia.com>

--- a/src/declarative/particles/particles.qrc
+++ b/src/declarative/particles/particles.qrc
@@ -6,5 +6,6 @@
         <file>defaultshaders/spriteimagevertex.shader</file>
         <file>defaultshaders/identitytable.png</file>
         <file>defaultshaders/defaultFadeInOut.png</file>
+        <file>defaultshaders/noise.png</file>
     </qresource>
 </RCC>
