--- a/src/declarative/particles/particles.qrc
+++ b/src/declarative/particles/particles.qrc
@@ -1,11 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>defaultshaders/imagefragment.shader</file>
-        <file>defaultshaders/imagevertex.shader</file>
-        <file>defaultshaders/spriteimagefragment.shader</file>
-        <file>defaultshaders/spriteimagevertex.shader</file>
-        <file>defaultshaders/identitytable.png</file>
-        <file>defaultshaders/defaultFadeInOut.png</file>
-        <file>defaultshaders/noise.png</file>
+        <file>particleresources/noise.png</file>
     </qresource>
 </RCC>
