Unify qmleasing and easingcurveeditor
Keeping the name qmleasing, but most of the code from easingcurveeditor.
easingcurveeditor had more UI and functionality, as qmleasing could only
import AfterEffects curves. That functionality has now been added to
easingcurveeditor.

Change-Id: Iac1a004f13fe33a18449af1b08bd22138d525322
Reviewed-by: Lars Knoll <lars.knoll@digia.com>
Reviewed-by: Christopher Adams <chris.adams@jollamobile.com>
Reviewed-by: Thomas Hartmann <Thomas.Hartmann@digia.com>

--- a/tools/qmleasing/resources.qrc
+++ b/tools/qmleasing/resources.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>easing.qml</file>
-        <file>TextField.qml</file>
+        <file>preview.qml</file>
+        <file>Button.qml</file>
     </qresource>
 </RCC>
