--- a/tools/qmleasing/properties.ui
+++ b/tools/qmleasing/properties.ui
@@ -86,7 +86,7 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="6" column="1">
     <spacer name="spacer_2">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -102,7 +102,7 @@
      </property>
     </spacer>
    </item>
-   <item row="5" column="0" colspan="3">
+   <item row="9" column="0" colspan="3">
     <widget class="QGroupBox" name="groupBox">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
@@ -121,6 +121,13 @@
      </property>
      <property name="flat">
       <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0" colspan="3">
+    <widget class="QPushButton" name="importButton">
+     <property name="text">
+      <string>Import AfterEffects Curve</string>
      </property>
     </widget>
    </item>
