Fix StocQt buttons
They're now on screen and using better componentization for the styling.

Task-number: QTBUG-28291
Change-Id: If21712e523c706ee05d257e209ed71dd61acf2dc
Reviewed-by: Jens Bache-Wiig <jens.bache-wiig@digia.com>

--- a/examples/quick/demos/stocqt/stocqt.qrc
+++ b/examples/quick/demos/stocqt/stocqt.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/demos/stocqt">
         <file>stocqt.qml</file>
         <file>content/Button.qml</file>
+        <file>content/CheckBox.qml</file>
         <file>content/DatePicker.qml</file>
         <file>content/StockChart.qml</file>
         <file>content/StockListModel.qml</file>
