wearable: fix items still being visible when returning to LauncherPage
Hide SwipeView items when appropriate, as it's not done automatically.

Change-Id: Ic716da004794b7d0eba65c220f6242d4113302d9
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>

--- a/examples/quickcontrols2/wearable/wearable.qrc
+++ b/examples/quickcontrols2/wearable/wearable.qrc
@@ -103,5 +103,6 @@
         <file>qml/WorldClock/images/swissnighthour@2x.png</file>
         <file>qml/WorldClock/images/swissnightminute.png</file>
         <file>qml/WorldClock/images/swissnightminute@2x.png</file>
+        <file>qml/SwipeViewPage.qml</file>
     </qresource>
 </RCC>
