wearable: add demo mode
This change adds a switch in the settings page that
enables demo mode. In this mode, each screen and UI control
will be visited and interacted with in a loop until the
screen is tapped, at which point it returns to the launcher page.

Change-Id: Icb306e23985d8c1f82725a95ed7f2e34b3d6c03f
Reviewed-by: Mikhail Svetkin <mikhail.svetkin@qt.io>
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>

--- a/examples/quickcontrols2/wearable/wearable.qrc
+++ b/examples/quickcontrols2/wearable/wearable.qrc
@@ -80,8 +80,12 @@
         <file>qml/Settings/images/bluetooth-light@2x.png</file>
         <file>qml/Settings/images/brightness-light.png</file>
         <file>qml/Settings/images/brightness-light@2x.png</file>
-        <file>qml/Settings/images/contrast-light.png</file>
-        <file>qml/Settings/images/contrast-light@2x.png</file>
+        <file>qml/Settings/images/demo-mode-light.png</file>
+        <file>qml/Settings/images/demo-mode-light@2x.png</file>
+        <file>qml/Settings/images/demo-mode-dark.png</file>
+        <file>qml/Settings/images/demo-mode-dark@2x.png</file>
+        <file>qml/Settings/images/demo-mode-white.png</file>
+        <file>qml/Settings/images/demo-mode-white@2x.png</file>
         <file>qml/Settings/images/theme-light.png</file>
         <file>qml/Settings/images/theme-light@2x.png</file>
         <file>qml/Settings/images/wifi-light.png</file>
@@ -90,8 +94,6 @@
         <file>qml/Settings/images/bluetooth-dark@2x.png</file>
         <file>qml/Settings/images/brightness-dark.png</file>
         <file>qml/Settings/images/brightness-dark@2x.png</file>
-        <file>qml/Settings/images/contrast-dark.png</file>
-        <file>qml/Settings/images/contrast-dark@2x.png</file>
         <file>qml/Settings/images/theme-dark.png</file>
         <file>qml/Settings/images/theme-dark@2x.png</file>
         <file>qml/Settings/images/wifi-dark.png</file>
@@ -147,5 +149,7 @@
         <file>qml/WorldClock/images/swissnightminute.png</file>
         <file>qml/WorldClock/images/swissnightminute@2x.png</file>
         <file>qml/SwipeViewPage.qml</file>
+        <file>qml/DemoMode.qml</file>
+        <file>qml/DemoModeIndicator.qml</file>
     </qresource>
 </RCC>
