Initialize TranslationData padding before writing cache files
Otherwise the resulting files differ subtly.

Fixes: QTBUG-74532
Change-Id: I12b4f1ba6dda781d63ad50cce87861ba24582bf7
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>

--- a/tests/auto/qml/qmlcachegen/trickypaths_umlaut.qrc
+++ b/tests/auto/qml/qmlcachegen/trickypaths_umlaut.qrc
@@ -1,5 +1,5 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource prefix="/">
-<file alias="Bäh.qml">umlaut.qml</file>
+<file alias="Bäh.qml">data/umlaut.qml</file>
 </qresource>
 </RCC>
