--- a/tests/auto/qml/qmlcachegen/trickypaths.qrc
+++ b/tests/auto/qml/qmlcachegen/trickypaths.qrc
@@ -1,7 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource prefix="/directory with spaces">
-<file alias="file name with spaces.qml">trickypaths.qml</file>
-<file>versionStyleSuffix-1.2-core-yc.qml</file>
-<file>versionStyleSuffix-1.2-more.qml</file>
+<file alias="file name with spaces.qml">data/trickypaths.qml</file>
+<file alias="versionStyleSuffix-1.2-core-yc.qml">data/versionStyleSuffix-1.2-core-yc.qml</file>
+<file alias="versionStyleSuffix-1.2-more.qml">data/versionStyleSuffix-1.2-more.qml</file>
 </qresource>
 </RCC>
