Implement QSG_VISUALIZE for RHI
Change-Id: I6343f316e2ecff4e4d7454fb450a1bd0c5a917b8
Reviewed-by: Andy Nichols <andy.nichols@qt.io>

--- a/src/quick/scenegraph/scenegraph.qrc
+++ b/src/quick/scenegraph/scenegraph.qrc
@@ -121,5 +121,8 @@
         <file>shaders_ng/shadereffect.frag.qsb</file>
         <file>shaders_ng/sprite.vert.qsb</file>
         <file>shaders_ng/sprite.frag.qsb</file>
+
+        <file>shaders_ng/visualization.vert.qsb</file>
+        <file>shaders_ng/visualization.frag.qsb</file>
     </qresource>
 </RCC>
