--- a/examples/quick/scenegraph/fboitem/fboitem.qrc
+++ b/examples/quick/scenegraph/fboitem/fboitem.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/scenegraph/textureinsgnode">
+    <qresource prefix="/scenegraph/fboitem">
         <file>main.qml</file>
     </qresource>
 </RCC>
