--- a/tests/auto/qml/qmlcachegen/data/retain.qrc
+++ b/tests/auto/qml/qmlcachegen/data/retain.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file alias="Retain.qml">data/Retain.qml</file>
+        <file alias="Retain.qml">Retain.qml</file>
     </qresource>
 </RCC>
