Remove ".2" from TARGETPATH, resource prefixes, etc.
Qt Quick Controls 1 will be removed in Qt 6, so now we can have the
simplified path for ourselves.

Having the .2 in the path causes issues for importing now that the
version is being bumped to 6.

Task-number: QTBUG-82922
Change-Id: I0b92cdd44c42c19b1c82e7b9a7959b86ac26c6e2
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>

--- a/src/imports/controls/default/qtquickcontrols2defaultstyleplugin.qrc
+++ b/src/imports/controls/default/qtquickcontrols2defaultstyleplugin.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/qt-project.org/imports/QtQuick/Controls.2/Default">
+    <qresource prefix="/qt-project.org/imports/QtQuick/Controls/Default">
         <file>images/arrow-indicator.png</file>
         <file>images/arrow-indicator@2x.png</file>
         <file>images/arrow-indicator@3x.png</file>
