Add lancelot test for ShaderEffect blending
Task-number: QTBUG-83975
Change-Id: I719fd206b8fa8ee29958eecbac9d618c7850ed80
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit ed8413f7f3b1f0a165c25cbcb9c162b8b12e7864)

--- a/tests/manual/scenegraph_lancelot/data/shared/shared.qrc
+++ b/tests/manual/scenegraph_lancelot/data/shared/shared.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>shaders/basic.frag</file>
+        <file>shaders/basic_alpha.frag</file>
         <file>shaders/cmyk.frag</file>
         <file>shaders/culling.frag</file>
         <file>shaders/edge.frag</file>
@@ -13,6 +14,7 @@
         <file>shaders/stencil.frag</file>
         <file>shaders/wave.vert</file>
         <file>shaders/+qsb/basic.frag</file>
+        <file>shaders/+qsb/basic_alpha.frag</file>
         <file>shaders/+qsb/cmyk.frag</file>
         <file>shaders/+qsb/culling.frag</file>
         <file>shaders/+qsb/edge.frag</file>
