Lancelot tests for ShaderEffect uniform bindings
Test that properties are bound to shader uniforms. Three
ways of setting the property: initial value, PropertyAnimation,
and UniformAnimator.

Task-number: QTBUG-83975
Pick-to: 5.15
Change-Id: I61518dc1bf680d0d28dd0171c5dcf8b4a6b3695e
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>

--- a/tests/manual/scenegraph_lancelot/data/shared/shared.qrc
+++ b/tests/manual/scenegraph_lancelot/data/shared/shared.qrc
@@ -10,6 +10,7 @@
         <file>shaders/gradient3.frag</file>
         <file>shaders/gradient4.frag</file>
         <file>shaders/gradient5.frag</file>
+        <file>shaders/property.frag</file>
         <file>shaders/shadow.frag</file>
         <file>shaders/stencil.frag</file>
         <file>shaders/wave.vert</file>
@@ -23,6 +24,7 @@
         <file>shaders/+qsb/gradient3.frag</file>
         <file>shaders/+qsb/gradient4.frag</file>
         <file>shaders/+qsb/gradient5.frag</file>
+        <file>shaders/+qsb/property.frag</file>
         <file>shaders/+qsb/shadow.frag</file>
         <file>shaders/+qsb/stencil.frag</file>
         <file>shaders/+qsb/wave.vert</file>
