Add lancelot test for ShaderEffect on layer
Task-number: QTBUG-83975
Change-Id: I40e3836205c62f52a80925384070175a7bcb5856
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit bd221dfcb3126140071ceeb8f337cdacbe05a62e)

--- a/tests/manual/scenegraph_lancelot/data/shared/shared.qrc
+++ b/tests/manual/scenegraph_lancelot/data/shared/shared.qrc
@@ -4,6 +4,7 @@
         <file>shaders/basic_alpha.frag</file>
         <file>shaders/cmyk.frag</file>
         <file>shaders/culling.frag</file>
+        <file>shaders/desaturate.frag</file>
         <file>shaders/edge.frag</file>
         <file>shaders/gradient.frag</file>
         <file>shaders/gradient2.frag</file>
@@ -18,6 +19,7 @@
         <file>shaders/+qsb/basic_alpha.frag</file>
         <file>shaders/+qsb/cmyk.frag</file>
         <file>shaders/+qsb/culling.frag</file>
+        <file>shaders/+qsb/desaturate.frag</file>
         <file>shaders/+qsb/edge.frag</file>
         <file>shaders/+qsb/gradient.frag</file>
         <file>shaders/+qsb/gradient2.frag</file>
