--- a/tests/manual/scenegraph_lancelot/data/shared/shared.qrc
+++ b/tests/manual/scenegraph_lancelot/data/shared/shared.qrc
@@ -11,9 +11,11 @@
         <file>shaders/gradient3.frag</file>
         <file>shaders/gradient4.frag</file>
         <file>shaders/gradient5.frag</file>
+        <file>shaders/gradientgrid.frag</file>
         <file>shaders/property.frag</file>
         <file>shaders/shadow.frag</file>
         <file>shaders/stencil.frag</file>
+        <file>shaders/subrect.vert</file>
         <file>shaders/wave.vert</file>
         <file>shaders/+qsb/basic.frag</file>
         <file>shaders/+qsb/basic_alpha.frag</file>
@@ -26,9 +28,11 @@
         <file>shaders/+qsb/gradient3.frag</file>
         <file>shaders/+qsb/gradient4.frag</file>
         <file>shaders/+qsb/gradient5.frag</file>
+        <file>shaders/+qsb/gradientgrid.frag</file>
         <file>shaders/+qsb/property.frag</file>
         <file>shaders/+qsb/shadow.frag</file>
         <file>shaders/+qsb/stencil.frag</file>
+        <file>shaders/+qsb/subrect.vert</file>
         <file>shaders/+qsb/wave.vert</file>
     </qresource>
 </RCC>
