Anisotropic antialiasing for distance field text
For perspective transforms, we need to find the sample
range in the glyph cache per pixel. We can do this by
getting the gradient of the distance field at the
specific pixel.

This will ensure proper antialiasing with any
projection, but has the limitation that when glyph contours
become thinner than a pixel, they may disappear or become
too emphasized, because the hardware-gradient - based on
neighbouring fragments - is not reliable at that scale.
So we should only default to this when we detect that the
text is child of a 3D scene.

To make this smooth, we need to know the mode of the renderer
when creating the shader. So QSGMaterial::createShader()
now takes a render mode that we can use to customize behavior
based on whether it is rendering into a 2D or 3D scene.

[ChangeLog][QtQuick] The QSGMaterial::createShader() virtual
function has been extended to take a render mode argument,
which can be used for any customizations needed in the case
where the shader will be used in combination with 3D perspective
transformations.

Fixes: QTBUG-84695
Change-Id: I5a18a4edbdfa07e8f9d506c42bb20e8eb580927d
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>

--- a/src/quick/scenegraph/scenegraph.qrc
+++ b/src/quick/scenegraph/scenegraph.qrc
@@ -30,13 +30,19 @@
 
         <file>shaders_ng/distancefieldtext.vert.qsb</file>
         <file>shaders_ng/distancefieldtext.frag.qsb</file>
+        <file>shaders_ng/distancefieldtext_fwidth.frag.qsb</file>
         <file>shaders_ng/distancefieldtext_a.frag.qsb</file>
+        <file>shaders_ng/distancefieldtext_a_fwidth.frag.qsb</file>
         <file>shaders_ng/distancefieldshiftedtext.vert.qsb</file>
         <file>shaders_ng/distancefieldshiftedtext.frag.qsb</file>
+        <file>shaders_ng/distancefieldshiftedtext_fwidth.frag.qsb</file>
         <file>shaders_ng/distancefieldshiftedtext_a.frag.qsb</file>
+        <file>shaders_ng/distancefieldshiftedtext_a_fwidth.frag.qsb</file>
         <file>shaders_ng/distancefieldoutlinetext.vert.qsb</file>
         <file>shaders_ng/distancefieldoutlinetext.frag.qsb</file>
+        <file>shaders_ng/distancefieldoutlinetext_fwidth.frag.qsb</file>
         <file>shaders_ng/distancefieldoutlinetext_a.frag.qsb</file>
+        <file>shaders_ng/distancefieldoutlinetext_a_fwidth.frag.qsb</file>
         <file>shaders_ng/hiqsubpixeldistancefieldtext.vert.qsb</file>
         <file>shaders_ng/hiqsubpixeldistancefieldtext.frag.qsb</file>
         <file>shaders_ng/hiqsubpixeldistancefieldtext_a.frag.qsb</file>
