Adjust testbench to properly support multiple styles
We need to split the uses of the Imagine style API out into
file-selected files. We set Imagine.path so that the default
assets are used for areas of the UI that are important to the
functioning of the example, as using custom assets here could
make it impossible to use the API if the assets were not
created correctly.

Change-Id: I2b6b683ffe65b7d573abf0ae793509a95417aead
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>

--- a/tests/manual/testbench/qml.qrc
+++ b/tests/manual/testbench/qml.qrc
@@ -41,5 +41,15 @@
         <file>testbench.qml</file>
         <file>controls/MenuBar.qml</file>
         <file>controls/SplitView.qml</file>
+        <file>+Imagine/ApplicationWindow.qml</file>
+        <file>ApplicationWindow.qml</file>
+        <file>+Imagine/ToolBar.qml</file>
+        <file>ToolBar.qml</file>
+        <file>+Imagine/Menu.qml</file>
+        <file>Menu.qml</file>
+        <file>+Imagine/Dialog.qml</file>
+        <file>Dialog.qml</file>
+        <file>ContentPane.qml</file>
+        <file>+Imagine/ContentPane.qml</file>
     </qresource>
 </RCC>
