QQuickShaderEffect: fix crash when hiding parent
It's possible for itemChange to be called during destruction when
deleting the QQuickShaderEffectImpl. We nullify m_impl before deleting
it via another pointer to it, so we must check that it's not null
before trying to use it.

Pick-to: 5.15
Fixes: QTBUG-86402
Change-Id: If4955445f7cc0d1f376bc9b86b95e1cca4d88ede
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>

--- a/tests/auto/quick/qquickshadereffect/resources.qrc
+++ b/tests/auto/quick/qquickshadereffect/resources.qrc
@@ -12,5 +12,7 @@
         <file>data/+qsb/test.vert</file>
         <file>data/+qsb/test.frag</file>
         <file>data/+qsb/red.frag</file>
+        <file>data/hideParent.qml</file>
+        <file>data/opacity-mask.frag.qsb</file>
     </qresource>
 </RCC>
